--- a/index.html
+++ b/index.html
@@ -11,97 +11,99 @@
         <div class="container">
             <div class="sidebar">
                 <div class="logo">Dashboard</div>
-                <ul>
-                    <li>Home</li>
-                    <li>Profile</li>
-                    <li>Messages</li>
-                    <li>History</li>
-                    <li>Tasks</li>
-                    <li>Communities</li>
-                </ul>
-                <div>
+                <div class="nav">
                     <ul>
-                        <li>Settings</li>
-                        <li>Support</li>
-                        <li>Privacy</li>
+                        <li>Home</li>
+                        <li>Profile</li>
+                        <li>Messages</li>
+                        <li>History</li>
+                        <li>Tasks</li>
+                        <li>Communities</li>
+                    </ul>
+                    <div>
+                        <ul>
+                            <li>Settings</li>
+                            <li>Support</li>
+                            <li>Privacy</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="header">
+                <div class="upper-head">
+                    <p>search bar</p>
+                    <ul>
+                        <li>bell icon</li>
+                        <li>profile icon</li>
+                        <li>User Name</li>
                     </ul>
                 </div>
-                <div class="header">
-                    <div class="upper-head">
-                        <p>search bar</p>
-                        <ul>
-                            <li>bell icon</li>
-                            <li>profile icon</li>
-                            <li>User Name</li>
-                        </ul>
+                <div class="lower-head">
+                    <p>user icon</p>
+                    <p>Hi there, User Name(@name)</p>
+                    <ul>
+                        <li>New</li>
+                        <li>Upload</li>
+                        <li>Share</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="main-content">
+                <div class="projects">
+                    Your Projects
+                    <div class="card">
+                        <p class="title">Title</p>
+                        <p>Text here</p>
                     </div>
-                    <div class="lower-head">
-                        <p>user icon</p>
-                        <p>Hi there, User Name(@name)</p>
-                        <ul>
-                            <li>New</li>
-                            <li>Upload</li>
-                            <li>Share</li>
-                        </ul>
+                    <div class="card">
+                        <p class="title">Title</p>
+                        <p>Text here</p>
                     </div>
-                    <div class="feed">
-                        <div class="projects">
-                            Your Projects
-                            <div class="card">
-                                <p class="title">Title</p>
-                                <p>Text here</p>
-                            </div>
-                            <div class="card">
-                                <p class="title">Title</p>
-                                <p>Text here</p>
-                            </div>
-                            <div class="card">
-                                <p class="title">Title</p>
-                                <p>Text here</p>
-                            </div>
-                            <div class="card">
-                                <p class="title">Title</p>
-                                <p>Text here</p>
-                            </div>
-                            <div class="card">
-                                <p class="title">Title</p>
-                                <p>Text here</p>
-                            </div>
-                            <div class="card">
-                                <p class="title">Title</p>
-                                <p>Text here</p>
-                            </div>
+                    <div class="card">
+                        <p class="title">Title</p>
+                        <p>Text here</p>
+                    </div>
+                    <div class="card">
+                        <p class="title">Title</p>
+                        <p>Text here</p>
+                    </div>
+                    <div class="card">
+                        <p class="title">Title</p>
+                        <p>Text here</p>
+                    </div>
+                    <div class="card">
+                        <p class="title">Title</p>
+                        <p>Text here</p>
+                    </div>
+                </div>
+                <div class="announce">
+                    Announcements
+                    <div class="card">
+                        <p class="title">Title</p>
+                        <p>Text here</p>
+                        <p class="title">Title</p>
+                        <p>Text here</p>
+                        <p class="title">Title</p>
+                        <p>Text here</p>
+                    </div>
+                </div>
+                <div class="trends">
+                    Trending
+                    <div class="card">
+                        <div class="user-handler">
+                            user icon
+                            <p>@username</p>
+                            <p>description</p>
                         </div>
-                        <div class="announce">
-                            Announcements
-                            <div class="card">
-                                <p class="title">Title</p>
-                                <p>Text here</p>
-                                <p class="title">Title</p>
-                                <p>Text here</p>
-                                <p class="title">Title</p>
-                                <p>Text here</p>
-                            </div>
+                        <div class="user-handler">
+                            user icon
+                            <p>@username</p>
+                            <p>description</p>
                         </div>
-                        <div class="trends">
-                            Trending
-                            <div class="card">
-                                <div class="user-handler">
-                                    user icon
-                                    <p>@username</p>
-                                    <p>description</p>
-                                </div>
-                                <div class="user-handler">
-                                    user icon
-                                    <p>@username</p>
-                                    <p>description</p>
-                                </div>
-                                <div class="user-handler">
-                                    user icon
-                                    <p>@username</p>
-                                    <p>description</p>
-                                </div>
-                            </div>
+                        <div class="user-handler">
+                            user icon
+                            <p>@username</p>
+                            <p>description</p>
                         </div>
                     </div>
                 </div>
