Add sidebar grid layout and font

--- a/index.html
+++ b/index.html
@@ -11,37 +11,38 @@
         <div class="container">
             <div class="sidebar">
                 <div class="logo">Dashboard</div>
-                <div class="nav">
-                    <ul>
-                        <li>Home</li>
-                        <li>Profile</li>
-                        <li>Messages</li>
-                        <li>History</li>
-                        <li>Tasks</li>
-                        <li>Communities</li>
-                    </ul>
-                    <div>
-                        <ul>
-                            <li>Settings</li>
-                            <li>Support</li>
-                            <li>Privacy</li>
-                        </ul>
-                    </div>
-                </div>
+                <ul class="nav">
+                    <li>Home</li>
+                    <li>Profile</li>
+                    <li>Messages</li>
+                    <li>History</li>
+                    <li>Tasks</li>
+                    <li>Communities</li>
+                </ul>
+                <ul class="branding">
+                    <li>Settings</li>
+                    <li>Support</li>
+                    <li>Privacy</li>
+                </ul>
             </div>
             <div class="header">
                 <div class="upper-head">
-                    <p>search bar</p>
-                    <ul>
+                    <p class="search">
+                        search bar
+                        <input type="text" />
+                    </p>
+                    <ul class="notification">
                         <li>bell icon</li>
                         <li>profile icon</li>
                         <li>User Name</li>
                     </ul>
                 </div>
                 <div class="lower-head">
-                    <p>user icon</p>
-                    <p>Hi there, User Name(@name)</p>
-                    <ul>
+                    <div class="user-info">
+                        <p>user icon</p>
+                        <p>Hi there, User Name(@name)</p>
+                    </div>
+                    <ul class="buttons">
                         <li>New</li>
                         <li>Upload</li>
                         <li>Share</li>
@@ -90,17 +91,17 @@
                 <div class="trends">
                     Trending
                     <div class="card">
-                        <div class="user-handler">
+                        <div class="trend-icon">
                             user icon
                             <p>@username</p>
                             <p>description</p>
                         </div>
-                        <div class="user-handler">
+                        <div class="trend-icon">
                             user icon
                             <p>@username</p>
                             <p>description</p>
                         </div>
-                        <div class="user-handler">
+                        <div class="trend-icon">
                             user icon
                             <p>@username</p>
                             <p>description</p>
