Add header grid layout

--- a/index.html
+++ b/index.html
@@ -26,28 +26,26 @@
                 </ul>
             </div>
             <div class="header">
-                <div class="upper-head">
-                    <p class="search">
-                        search bar
-                        <input type="text" />
-                    </p>
-                    <ul class="notification">
-                        <li>bell icon</li>
-                        <li>profile icon</li>
-                        <li>User Name</li>
-                    </ul>
+                <div class="search">
+                    search bar
+                    <input type="text" />
                 </div>
-                <div class="lower-head">
-                    <div class="user-info">
-                        <p>user icon</p>
-                        <p>Hi there, User Name(@name)</p>
-                    </div>
-                    <ul class="buttons">
-                        <li>New</li>
-                        <li>Upload</li>
-                        <li>Share</li>
-                    </ul>
+                <ul class="notification">
+                    <li>bell icon</li>
+                    <li>profile icon</li>
+                    <li>User Name</li>
+                </ul>
+
+                <div class="user-info">
+                    <p class="icon">user icon</p>
+                    <p>Hi there,</p>
+                    <p>User Name(@name)</p>
                 </div>
+                <ul class="share-buttons">
+                    <li>New</li>
+                    <li>Upload</li>
+                    <li>Share</li>
+                </ul>
             </div>
             <div class="main-content">
                 <div class="projects">
