Add Main Content grid layout

--- a/index.html
+++ b/index.html
@@ -48,63 +48,72 @@
                 </ul>
             </div>
             <div class="main-content">
-                <div class="projects">
+                <div>
                     Your Projects
-                    <div class="card">
-                        <p class="title">Title</p>
-                        <p>Text here</p>
-                    </div>
-                    <div class="card">
-                        <p class="title">Title</p>
-                        <p>Text here</p>
-                    </div>
-                    <div class="card">
-                        <p class="title">Title</p>
-                        <p>Text here</p>
-                    </div>
-                    <div class="card">
-                        <p class="title">Title</p>
-                        <p>Text here</p>
-                    </div>
-                    <div class="card">
-                        <p class="title">Title</p>
-                        <p>Text here</p>
-                    </div>
-                    <div class="card">
-                        <p class="title">Title</p>
-                        <p>Text here</p>
+                    <div class="projects">
+                        <div class="card">
+                            <p class="title">Title</p>
+                            <p>Text here</p>
+                        </div>
+                        <div class="card">
+                            <p class="title">Title</p>
+                            <p>Text here</p>
+                        </div>
+                        <div class="card">
+                            <p class="title">Title</p>
+                            <p>Text here</p>
+                        </div>
+                        <div class="card">
+                            <p class="title">Title</p>
+                            <p>Text here</p>
+                        </div>
+                        <div class="card">
+                            <p class="title">Title</p>
+                            <p>Text here</p>
+                        </div>
+                        <div class="card">
+                            <p class="title">Title</p>
+                            <p>Text here</p>
+                        </div>
                     </div>
                 </div>
-                <div class="announce">
-                    Announcements
-                    <div class="card">
-                        <p class="title">Title</p>
-                        <p>Text here</p>
-                        <p class="title">Title</p>
-                        <p>Text here</p>
-                        <p class="title">Title</p>
-                        <p>Text here</p>
-                    </div>
-                </div>
-                <div class="trends">
-                    Trending
-                    <div class="card">
-                        <div class="trend-icon">
-                            user icon
-                            <p>@username</p>
-                            <p>description</p>
+
+                <div>
+                    <p>
+                        Announcements
+                        <div class="announce">
+                            <div class="card">
+                                <p class="title">Title</p>
+                                <p>Text here</p>
+                                <p class="title">Title</p>
+                                <p>Text here</p>
+                                <p class="title">Title</p>
+                                <p>Text here</p>
+                            </div>
                         </div>
-                        <div class="trend-icon">
-                            user icon
-                            <p>@username</p>
-                            <p>description</p>
+                    </p>
+                    <p>
+                        Trending
+                        <div class="trends">
+                            <div class="card">
+                                <div class="trend-icon">
+                                    user icon
+                                    <p>@username</p>
+                                    <p>description</p>
+                                </div>
+                                <div class="trend-icon">
+                                    user icon
+                                    <p>@username</p>
+                                    <p>description</p>
+                                </div>
+                                <div class="trend-icon">
+                                    user icon
+                                    <p>@username</p>
+                                    <p>description</p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="trend-icon">
-                            user icon
-                            <p>@username</p>
-                            <p>description</p>
-                        </div>
-                    </div>
+                    </p>
                 </div>
             </div>
         </div>
