Add icons to sidebar

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <body>
         <div class="container">
             <div class="sidebar">
-                <div class="logo">Dashboard</div>
+                <div class="logo"><img class="main-logo" style="vertical-align: bottom;" src="./icons/triforce.svg" alt="Just three tirangles, nothing legendary"> Dashboard</div>
                 <ul class="nav">
-                    <li>Home</li>
-                    <li>Profile</li>
-                    <li>Messages</li>
-                    <li>History</li>
-                    <li>Tasks</li>
-                    <li>Communities</li>
+                    <li><img class="icon" style="vertical-align:bottom;" src="./icons/home-variant-outline.svg" alt="Home">Home</li>
+                    <li><img class="icon" style="vertical-align:bottom;" src="./icons/card-account-details-outline.svg" alt="Profile">Profile</li>
+                    <li><img class="icon" style="vertical-align:bottom;" src="./icons/chat-outline.svg" alt="Messages">Messages</li>
+                    <li><img class="icon" style="vertical-align:bottom;" src="./icons/clock-outline.svg" alt="History">History</li>
+                    <li><img class="icon" style="vertical-align:bottom;" src="./icons/note-multiple-outline.svg" alt="Tasks">Tasks</li>
+                    <li><img class="icon" style="vertical-align:bottom;" src="./icons/human-queue.svg" alt="Communities">Communities</li>
                 </ul>
                 <ul class="branding">
-                    <li>Settings</li>
-                    <li>Support</li>
-                    <li>Privacy</li>
+                    <li><img class="icon" style="vertical-align:bottom;" src="./icons/cog-outline.svg" alt="Settings">Settings</li>
+                    <li><img class="icon" style="vertical-align:bottom;" src="./icons/information.svg" alt="Support">Support</li>
+                    <li><img class="icon" style="vertical-align:bottom;" src="./icons/security.svg" alt="Privacy">Privacy</li>
                 </ul>
             </div>
             <div class="header">
