Add header styles and icons

--- a/index.html
+++ b/index.html
@@ -27,19 +27,21 @@
             </div>
             <div class="header">
                 <div class="search">
-                    search bar
+                    <img class="icon" style="vertical-align:middle;" src="./icons/magnify.svg" alt="Search">
                     <input type="text" />
                 </div>
                 <ul class="notification">
-                    <li>bell icon</li>
-                    <li>profile icon</li>
+                    <li><img class="icon"  src="./icons/bell-ring.svg" alt="Notification"></li>
+                    <li><img class="pfp"  src="./icons/dog.png" alt="Profile"></li>
                     <li>User Name</li>
                 </ul>
 
                 <div class="user-info">
-                    <p class="icon">user icon</p>
-                    <p>Hi there,</p>
-                    <p>User Name(@name)</p>
+                    <img class="pfp" src="./icons/dog.png" alt="Profile">
+                    <div>
+                        Hi there,
+                    <p class="user-name">User Name(@name)</p>
+                    </div>
                 </div>
                 <ul class="share-buttons">
                     <li>New</li>
