--- a/index.html
+++ b/index.html
@@ -54,28 +54,58 @@
                     Your Projects
                     <div class="projects">
                         <div class="card">
-                            <p class="title">Title</p>
-                            <p>Text here</p>
+                            <p class="title">Futuristic App 1</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <div class="interact">
+                                <img class="icon" src="./icons/heart.svg">
+                                <img class="icon" src="./icons/eye-plus.svg">
+                                <img class="icon" src="./icons/share.svg">
+                            </div>
                         </div>
                         <div class="card">
-                            <p class="title">Title</p>
-                            <p>Text here</p>
+                            <p class="title">Futuristic App 2</p>
+                            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <div class="interact">
+                                <img class="icon" src="./icons/heart.svg">
+                                <img class="icon" src="./icons/eye-plus.svg">
+                                <img class="icon" src="./icons/share.svg">
+                            </div>
                         </div>
                         <div class="card">
-                            <p class="title">Title</p>
-                            <p>Text here</p>
+                            <p class="title">Pet Dating App</p>
+                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <div class="interact">
+                                <img class="icon" src="./icons/heart.svg">
+                                <img class="icon" src="./icons/eye-plus.svg">
+                                <img class="icon" src="./icons/share.svg">
+                            </div>
                         </div>
                         <div class="card">
-                            <p class="title">Title</p>
-                            <p>Text here</p>
+                            <p class="title">Food Delivery App</p>
+                            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <div class="interact">
+                                <img class="icon" src="./icons/heart.svg">
+                                <img class="icon" src="./icons/eye-plus.svg">
+                                <img class="icon" src="./icons/share.svg">
+                            </div>
                         </div>
                         <div class="card">
-                            <p class="title">Title</p>
-                            <p>Text here</p>
+                            <p class="title">AI Generator App</p>
+                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                            <div class="interact">
+                                <img class="icon" src="./icons/heart.svg">
+                                <img class="icon" src="./icons/eye-plus.svg">
+                                <img class="icon" src="./icons/share.svg">
+                            </div>
                         </div>
                         <div class="card">
-                            <p class="title">Title</p>
-                            <p>Text here</p>
+                            <p class="title">Best Game App</p>
+                            <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                            <div class="interact">
+                                <img class="icon" src="./icons/heart.svg">
+                                <img class="icon" src="./icons/eye-plus.svg">
+                                <img class="icon" src="./icons/share.svg">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -85,12 +115,18 @@
                         Announcements
                         <div class="announce">
                             <div class="card">
+                                <div>
                                 <p class="title">Title</p>
-                                <p>Text here</p>
-                                <p class="title">Title</p>
-                                <p>Text here</p>
-                                <p class="title">Title</p>
-                                <p>Text here</p>
+                                <p>Text here</p>  
+                                </div>
+                                <div>
+                                    <p class="title">Title</p>
+                                    <p>Text here</p>  
+                                    </div>
+                                <div>
+                                     <p class="title">Title</p>
+                                     <p>Text here</p>  
+                                </div>
                             </div>
                         </div>
                     </p>
