Add Announcements grid layout and styles

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <p class="title">AI Generator App</p>
+                            <p class="title">AI Generator</p>
                             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
                             <div class="interact">
                                 <img class="icon" src="./icons/heart.svg">
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <p class="title">Best Game App</p>
+                            <p class="title">Best Game in Development</p>
                             <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                             <div class="interact">
                                 <img class="icon" src="./icons/heart.svg">
@@ -116,16 +116,16 @@
                         <div class="announce">
                             <div class="card">
                                 <div>
-                                <p class="title">Title</p>
-                                <p>Text here</p>  
+                                <p class="title">Website Update</p>
+                                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit ...</p>  
+                                </div>
+                                <div class="middle">
+                                    <p class="title">Celebrating Earth Day!</p>
+                                    <p>Sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt ...</p>  
                                 </div>
                                 <div>
-                                    <p class="title">Title</p>
-                                    <p>Text here</p>  
-                                    </div>
-                                <div>
-                                     <p class="title">Title</p>
-                                     <p>Text here</p>  
+                                     <p class="title">Upcoming Activities</p>
+                                     <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet ...</p>  
                                 </div>
                             </div>
                         </div>
