Add Trends grid layout, styles and icons

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                             <p class="title">Best Game in Development</p>
                             <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                             <div class="interact">
-                                <img class="icon" src="./icons/heart.svg">
-                                <img class="icon" src="./icons/eye-plus.svg">
-                                <img class="icon" src="./icons/share.svg">
+                                <img class="icon" src="./icons/heart.svg" alt="heart">
+                                <img class="icon" src="./icons/eye-plus.svg" alt="eye">
+                                <img class="icon" src="./icons/share.svg" alt="share">
                             </div>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
 
                 <div>
                     <p>
-                        Announcements
+                        <p class="right-bar">Announcements</p>
                         <div class="announce">
                             <div class="card">
                                 <div>
@@ -131,23 +131,36 @@
                         </div>
                     </p>
                     <p>
-                        Trending
+                        <p class="right-bar">Trending</p>
                         <div class="trends">
                             <div class="card">
-                                <div class="trend-icon">
-                                    user icon
-                                    <p>@username</p>
-                                    <p>description</p>
+                                <div class="trend-icon" >
+                                    <img class="pfp" id="trend1" src="icons/teacher.svg">
+                                    <div>
+                                        @pochaco
+                                        <p>World Record Speedrunner</p>
+                                    </div>
                                 </div>
-                                <div class="trend-icon">
-                                    user icon
-                                    <p>@username</p>
-                                    <p>description</p>
+                                <div class="trend-icon" >
+                                    <img class="pfp" id="trend2"src="icons/fast-food.png">
+                                    <div>
+                                        @animals
+                                        <p>Trend Setter</p>
                                 </div>
-                                <div class="trend-icon">
-                                    user icon
-                                    <p>@username</p>
-                                    <p>description</p>
+                                </div>
+                                <div class="trend-icon" >
+                                    <img class="pfp" id="trend3" src="icons/person.svg">
+                                    <div>
+                                        @emiratx
+                                        <p>Digital Artist</p>
+                                    </div>
+                                </div>
+                                <div class="trend-icon" >
+                                    <img class="pfp"  id="trend4" src="icons/robot.svg">
+                                    <div
+                                    >   @samoh
+                                        <p>Gym Enjoyer</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
